--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,26 @@
 
 .header {
     display: flex;
-    flex-direction: row;
+    margin: 0 56px;
+    padding: 14px 66px;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 40px;
+    align-self: stretch;
+}
+
+.header img {
+    display: flex;
+    width: 200px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
 }
 
 .header-right {
     display: flex;
     flex-direction: row;
+    width: 625px;
+    height: 54px;
 }
 
 .header-links {
@@ -26,13 +37,13 @@
     font-family: "Raleway", sans-serif;
     font-size: 16px;
     font-style: normal;
-    font-weight: 800;
-    line-height: normal;
-    font-variant: all-small-caps;
+    font-weight: 700;
+    line-height: 137%;
     display: inline-flex;
     align-items: center;
-    gap: 37px;
+    gap: 24px;
     margin-right: 24px;
+    padding: 4px 0px;
 }
 
 .header-links a {
@@ -48,21 +59,109 @@ a:visited {
     color:inherit;
 }
 
+.header-button:hover {
+    cursor: pointer;
+}
+
 .header button {
-    height: 47px;
+    min-width: 200px;
+    height: 54px;
     padding: 8px 16px;
-    border-radius: 69px;
+    border-radius: 9999px;
     border-style: none;
     background: #061C52;
     color: #FFF;
     display: flex;
-    align-items: flex-end;
+    gap: 8px;
+    align-items: center;
+    justify-content: center;
     font-family: "Bebas Neue", sans-serif;
     font-size: 24px;
-    line-height: normal;
+    font-weight: 400;
+    line-height: 90%; /* 21.6px */
     letter-spacing: -0.24px;
 }
 
 .header button:hover {
     cursor: pointer;
+}
+
+.hero-content {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 24px;
+    margin-top: 53px;
+    margin-left: 226px;
+    padding-top: 56px;
+    width: 494px;
+    height: 631px;
+}
+
+.hero-content h1 {
+    color: #061C52;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 112px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 76%;
+    letter-spacing: -2.8px;
+    width: 502px;
+    height: 255px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    position: relative;
+    z-index: 2;
+}
+
+.highlight {
+    position:absolute;
+    z-index: 1;
+    margin-top: 229px;
+    margin-left: 207px;
+}
+
+.hero-content h4 {
+    color: #061C52;
+    font-family: "Raleway", sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%;
+    font-variant: all-small-caps;
+    width: 494px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero-content p {
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 137%;
+    width: 347px;
+}
+
+.hero-background {
+    position: relative;
+    width: 1239px;
+    height: 900px;
+}
+
+.background-frame-1, .girl-1 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.background-frame-1 {
+    z-index: 1;
+}
+
+.girl-1 {
+    z-index: 2;
 }
