--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,6 @@ a:visited {
     color:inherit;
 }
 
-.header-button:hover {
-    cursor: pointer;
-}
-
 .header button {
     min-width: 200px;
     height: 54px;
@@ -79,7 +75,7 @@ a:visited {
     font-size: 24px;
     font-weight: 400;
     line-height: 90%; /* 21.6px */
-    letter-spacing: -0.24px;
+    letter-spacing: -1%;
 }
 
 .header button:hover {
@@ -147,21 +143,25 @@ a:visited {
 }
 
 .hero-background {
+    width: 798px;
+    height: 818px;
+    overflow: hidden;
     position: relative;
-    width: 1239px;
-    height: 900px;
-}
-
-.background-frame-1, .girl-1 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    margin-left: 642px;
+    margin-top: -684px;
 }
 
 .background-frame-1 {
     z-index: 1;
+    width: 698px;
+    height: 632px;
+    position: absolute;
+    margin-top: 186px;
+    margin-left: 228px;
 }
 
 .girl-1 {
     z-index: 2;
+    position: absolute;
+   
 }
