--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,37 @@
     padding: 0;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    height:auto!important;
+ }
+
 .hero {
     background-color: #ADDDEC;
+    height: 100%;
+    position: relative;
+}
+
+
+.hero:before {
+    content:"";
+    background-color:#ADDDEC;
+    position: absolute;
+    height: 100%;
+    width: 4000px;
+    left: -2000px;
+    z-index: -1;
 }
 
 .header {
     display: flex;
-    margin: 0 56px;
+    margin: 0 auto 0 auto;
     padding: 14px 66px;
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
+    width: 100%;
 }
 
 .header img {
@@ -82,6 +102,11 @@ a:visited {
     cursor: pointer;
 }
 
+.hero-main {
+    display: flex;
+    justify-content: center;
+}
+
 .hero-content {
     display: inline-flex;
     flex-direction: column;
@@ -89,7 +114,7 @@ a:visited {
     justify-content: flex-start;
     gap: 24px;
     margin-top: 53px;
-    margin-left: 226px;
+    margin-left: 15.69%;
     padding-top: 56px;
     width: 494px;
     height: 631px;
@@ -115,8 +140,8 @@ a:visited {
 .highlight {
     position:absolute;
     z-index: 1;
-    margin-top: 229px;
-    margin-left: 207px;
+    margin-top: 120px;
+    margin-left: -18px;
 }
 
 .hero-content h4 {
@@ -145,10 +170,10 @@ a:visited {
 .hero-background {
     width: 798px;
     height: 818px;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: relative;
-    margin-left: 642px;
-    margin-top: -684px;
+    margin-left: -78px;
+    margin-top: 0px;
 }
 
 .background-frame-1 {
@@ -158,6 +183,7 @@ a:visited {
     position: absolute;
     margin-top: 186px;
     margin-left: 228px;
+    object-fit: cover;
 }
 
 .girl-1 {
