--- a/styles.css
+++ b/styles.css
@@ -98,13 +98,13 @@ a:visited {
     letter-spacing: -1%;
 }
 
-.header button:hover {
+button:hover {
     cursor: pointer;
 }
 
 .hero-main {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .hero-content {
@@ -159,12 +159,58 @@ a:visited {
 }
 
 .hero-content p {
+    color: #061C52;
     font-family: Raleway;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 137%;
     width: 347px;
+}
+
+.hero-content button {
+    min-width: 200px;
+    height: 68px;
+    padding: 8px 16px 8px 32px;
+    border-radius: 9999px;
+    border: 1.431px solid #061C52;
+    backdrop-filter: blur(23.76px);
+    background: none;
+    color: #061C52;
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 90%; /* 21.6px */
+    letter-spacing: -1%;
+    position: relative;
+}
+
+.green-elipse {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    z-index: 1;
+}
+
+.arrow {
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
+    position: absolute;
+    z-index: 2;
+}
+
+.arrow-container {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    /* background: linear-gradient(0deg, #DBFF28) 0%, #DBFF28 100%, #061C52; */
 }
 
 .hero-background {
@@ -190,4 +236,143 @@ a:visited {
     z-index: 2;
     position: absolute;
    
+}
+
+.subscriptions {
+    background-color: #061C52;
+    height: 100%;
+    position: relative;
+}
+
+
+.subscriptions:before {
+    content:"";
+    background-color:#061C52;
+    position: absolute;
+    height: 100%;
+    width: 4000px;
+    left: -2000px;
+    z-index: -1;
+}
+
+.subs-content {
+    display: flex;
+    max-width: 750px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 112px;
+    flex: 1 0 0;
+    width: 528px;
+    height: 1029px;
+}
+
+.subs-top-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 48px;
+    align-self: stretch;
+}
+
+.subs-top-content {
+    width: 528px;
+    height: 328px;
+}
+
+.subscriptions h4 {
+    color: #fff;
+    font-family: "Raleway", sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%;
+    font-variant: all-small-caps;
+}
+
+.subscriptions h2 {
+    color: #F8F7F3;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 88px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 76%;
+    letter-spacing: -2.2px;
+    width: 300px;
+    height: 201px;
+}
+
+.subscriptions h2 span {
+    color: #DBFF28;
+}
+
+.subscriptions button {
+    min-width: 200px;
+    height: 68px;
+    padding: 8px 16px 8px 32px;
+    border-radius: 9999px;
+    border: 1px solid #fff;
+    background: none;
+    color: #fff;
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 90%; /* 21.6px */
+    letter-spacing: -1%;
+    position: relative;
+}
+
+.subs-bottom-content {
+    width: 528px;
+    height: 549px;
+}
+
+.subs-bottom-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
+    align-self: stretch;
+    width: 528px;
+    height: 549px;
+}
+
+.service {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    gap: 43px;
+    align-self: stretch;
+    width: 528px;
+    height: auto;
+}
+
+.service h5 {
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%; /* 26.4px */
+    font-variant: all-small-caps;
+}
+
+.service-name {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.subs-bottom-content p {
+    color:#F8F7F3;
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 137%; /* 21.92px */
 }
