--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ footer {
     }
 
 html, body {
-    max-width: 100%;
+    max-width: 100vw;
     overflow-x: hidden;
     height:auto!important;
  }
@@ -117,17 +117,22 @@ html, body {
 .header {
     display: flex;
     margin: 0 auto 0 auto;
-    padding: 14px 66px;
+    padding: 1% 4.58%; /* 14px 66px; */
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
     width: 100%;
 }
 
+.header .logo-container {
+    width: 19%;
+    /* width: 250px; */
+}
+
 .header img {
     display: flex;
-    width: 200px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
@@ -137,6 +142,8 @@ html, body {
     flex-direction: row;
     width: 625px;
     height: 54px;
+    /* width: 50%; */
+    /* height: 50%; */
 }
 
 .no-wrap-header-about {
